<resources>
    <string name="app_name">Maurizio Pietrantuono</string>
    <string name="films">Films</string>
    <string name="persons">People</string>

    <string name="not_available">Not available</string>
    <string name="title">TITLE: &#160;</string>
    <string name="episodeid">EPISODE ID: &#160;</string>
    <string name="director">DIRECTOR: &#160;</string>
    <string name="producer">PRODUCER: &#160;</string>
    <string name="release">RELEASE DATE: &#160;</string>
    <string name="name">NAME: &#160;</string>
    <string name="birth">BIRTH YEAR: &#160;</string>
    <string name="eyes">EYES COLOR: &#160;</string>
    <string name="gender">GENDER: &#160;</string>
    <string name="hair">HAIR COLOR: &#160;</string>
    <string name="height">HEIGHT: &#160;</string>
    <string name="mass">MASS: &#160;</string>
    <string name="skin">SKIN COLOUR: &#160;</string>

</resources>
